Fix some openapi small things
